<resources>
    <string name="app_name">StockWallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_overview">Oversikt</string>
    <string name="menu_home">Hjem</string>
    <string name="menu_search">Søk</string>
    <string name="menu_buy_sell">Kjøp og Salg</string>
    <string name="menu_settings">Innstillinger</string>
    <string name="percent_earning">Avkastning %:</string>
    <string name="stock_value">Verdi:</string>
    <string name="stock_earning">Avkastning NOK:</string>

    <string name="stock_name_label">Ticker</string>
    <string name="stock_ticker_search">Ticker:</string>
    <string name="stock_full_name">Aksjens fulle navn:</string>
    <string name="input_stock_name">Eks: \"MSFT\"</string>
    <string name="stock_price_label">Kurs(I aksjens lokale valuta)</string>
    <string name="aksje_pris_ph">Eks: \"15.3\"</string>
    <string name="stock_volume_label">Volum</string>
    <string name="input_stock_volume">Eks: \"126\"</string>
    <string name="stock_fee_label">Kurtasje</string>
    <string name="input_stock_fee">Eks: \"12\"</string>
    <string name="buy_sell_button">Registrer handel</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Epost</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Velkommen!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_username">epost</string>
    <string name="login_password">Password</string>
    <string name="stock_wallet_logo">Stock Wallet</string>
    <string name="register_user_title">Registrer ny bruker</string>
    <string name="stock_volume">Volum:</string>
    <string name="stock_average_price">Snitt innkjøps pris:</string>
    <string name="stock_intraday">Endring idag: </string>
    <string name="stock_nowday_price">Aksjepris idag: </string>
    <string name="stock_ticker">Ticker:</string>
    <string name="stock_last_24">Siste 24t</string>
    <string name="stock_last">Siste:</string>
    <string name="stock_current_price">Pris (Valuta):</string>
    <string name="stock_currency">Valuta: </string>
    <string name="stock_market_value">Markeds verdi:</string>
    <string name="stock_single_earning">Avkastning: </string>
    <string name="stock_single_earning_total">Total avkastning: </string>
    <string name="stock_revenue">Inntjening: </string>
    <string name="stock_PE">P/E:</string>
    <string name="stock_stocks">Aksjer:</string>
    <string name="stock_short_ratio">Short forhold:</string>
    <string name="stock_bvs">BV/S</string>
    <string name="stock_low">Endring årlig bunn:</string>
    <string name="stock_high">Endring årlig topp:</string>
    <string name="registrer">Registrer</string>
    <string name="etternavn">Etternavn</string>
    <string name="e_mail">Epost</string>
    <string name="passord">Passord</string>
    <string name="fornavn">Fornavn</string>
    <string name="logg_inn">Logg Inn</string>
    <string name="registrer_med_e_mail">Registrer med E-post</string>
</resources>